# autodiff

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: multi_quadratic.rs  quadratic.rs  quadratic_closure.rs  quadratic_explicit.rs  quadratic_generic.rs  second_order.rs
src/: approx.rs  autofloat.rs  bytemuck.rs  cgmath.rs  cwise.rs  forward_autodiff.rs  lib.rs  nalgebra.rs  simba.rs
src/autofloat/: add.rs  div.rs  float.rs  float_core.rs  float_impl.rs  mul.rs  num.rs  rem.rs  scalar.rs  sub.rs
tests/: autodiff.rs
