[package]
name = "autodiff"
version = "0.3.2"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An automatic differentiation library"
edition = "2018"

homepage = "https://github.com/elrnv/autodiff"
repository = "https://github.com/elrnv/autodiff"
readme = "README.md"

keywords = ["auto", "derivative", "automatic", "differentiation"]

[badges]
travis-ci = { repository = "elrnv/autodiff", branch = "master" }

[dependencies]
num-traits = "0.2"
approx = { version = "0.5", optional = true }
nalgebra = { version = "0.29", optional = true }
bytemuck = { version = "1.7", optional = true }
simba = { version = "0.6", optional = true }
cgmath = { version = "0.18", optional = true }

[dev-dependencies]
rand = "0.8"
approx = "0.5"
cgmath = "0.18"

[features]
default = ["cwise"]
na = ["nalgebra", "approx", "simba"]
cwise = []
