[package]
name = "autofloat"
version = "1.0.0"
authors = ["Fabian Meyer <rookfighter@posteo.org"]
license = "MIT OR Apache-2.0"
description = "Pure Rust library for efficient automatic differentiation"
edition = "2021"

homepage = "https://github.com/rookfighter/autofloat"
repository = "https://github.com/rookfighter/autofloat"
readme = "README.md"

keywords = ["auto", "derivative", "automatic", "differentiation", "gradient"]

[dependencies]
num-traits = "0.2"
approx = { version = "0.5", optional = true }
nalgebra = { version = "0.33", optional = true }
simba = { version = "0.9", optional = true }

[features]
float_impl = []                                              # enables the float impl macros
std = ["float_impl", "num-traits/std"]
default = ["std"]
nalgebra = ["dep:nalgebra", "float_impl", "approx", "simba"]
